refactor: optimize CustomUserDetailsService with cleaner validation and stream usage